styles/navigation-bar.css
.navigation-bar {
	align-items: center;
	background-color: #21497A;
	color: white;
	display: flex;
	flex-direction: row;
	height: 3rem;
	justify-content: flex-end;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 5;
}

.navigation-bar__hamburger-menu {
	padding: 0 1rem;
}

.navigation-bar__company-details {
	display: none;
}

.navigation-bar__company-details > i,
.navigation-bar__company-details > span {
	margin-left: .8rem;
	transition-property: transform;
	transition-duration: .2s;
}

.navigation-bar__company-details > i:hover {
	color: #002454;
	transform: scale(1.2);
}

.navigation-menu {
	background-color: #4f6793;
	display: flex;
	flex-direction: column;
	height: 0;
	opacity: 0;
	position: fixed;
	right: 0;
	top: 3.2rem;
	transition: all .2s ease-out;
	width: 100%;
}

.navigation-menu--active {
	height: 250px;
	opacity: 1;
	transition: all .3s ease-in-out;
}

.navigation-menu__links {
	align-items: center;
	display: flex;
	flex-direction: column;
	height: 100%;
	justify-content: center;
	list-style-type: none;
	padding: 0;
	width: 100%;
}

.navigation-menu__links a {
	color: white;
	text-decoration: none;
}

.navigation-menu__link {
	font-size: 1.2rem;
	padding: 12px;
}

.navigation-menu__link:hover a {
	color: #002454;
}

@media screen and (min-device-width: 480px) {

	.navigation-bar {
		justify-content: space-between;
	}

	.navigation-bar__company-details {
		align-items: center;
		display: flex;
		flex-direction: row;
		font-weight: bold;
	}

	.navigation-menu {
		max-width: 20rem;
	}
}

